[project]
name = "jumpingjay"
version = "0.1.0"
description = "Calculate duration since a given time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["python-dateutil>=2.8.0"]

[project.scripts]
durationsince = "jumpingjay.main:durationsince"
durationtill = "jumpingjay.main:durationtill"
timein = "jumpingjay.main:timein"
jumpingjay = "jumpingjay.main:list_commands"

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "CPY001"]

[tool.pyright]
venvPath = "."
venv = ".venv"
